--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
+
 </head>
 
 <body>
@@ -22,18 +24,21 @@
         <div class="display">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                        <h3 class="panel-title">Current Train Schedule</h3>
+                    <h3 class="panel-title">Current Train Schedule</h3>
                 </div>
                 <div class="panel-body">
-                    <table class="table">
-                        <tr>
-                            <th>Train Name</th>
-                            <th>Destination</th>
-                            <th>Frequency(min)</th>
-                            <th>Next Arrival</th>
-                            <th>Minutes Away</th>                            
-                        </tr>
-                       
+                    <table id="train-table" class="table">
+                        <thead>
+                            <tr>
+                                <th>Train Name</th>
+                                <th>Destination</th>
+                                <th>Frequency(min)</th>
+                                <th>Next Arrival</th>
+                                <th>Minutes Away</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -82,5 +87,10 @@
         </div>
     </div>
 </body>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+<script src="logic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
 </html>
