added working clock and date on display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Train Schedule</h1>
-            <p></p>
+            <p class="date-stamp" id="date"></p>
+            <p class="date-stamp" id="clock"></p>
+
         </div>
 
 
