--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <button id="submit" type="button" class="btn btn-primary">Submit</button>
+                                <button id="submit" type="button" class="btn .btn-default">Submit</button>
                             </div>
                         </div>
                     </div>
